test/TestPhases/typechecker/invalid/ignoreActivityResult.blc
module

activity calc() returns int64
    await true
    return 0
end

activity main ()()
    run calc()
end
